--- a/novo.html
+++ b/novo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ba Doces</title>
+    <title>Delícias Doces</title>
     <style>
         body {
             display: flex;
@@ -15,14 +15,14 @@
             font-family: 'Comic Sans MS', cursive, sans-serif;
             background: #cd8b54;
             color: #fff;
+            text-align: center;
         }
 
         .button-container {
-            width: 90%;
-            max-width: 360px;
+            width: 100%;
+            max-width: 400px;
             padding: 20px;
             box-sizing: border-box;
-            text-align: center;
             background: rgba(255, 255, 255, 0.9);
             border-radius: 15px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -31,7 +31,7 @@
 
         h1 {
             margin: 0 0 20px 0;
-            font-size: 36px;
+            font-size: 28px;
             color: #cd8b54;
             text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
         }
@@ -44,7 +44,7 @@
             border: none;
             color: #fff;
             background-color: #cd8b54;
-            border-radius: 50px;
+            border-radius: 10px;
             cursor: pointer;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: background-color 0.3s ease, transform 0.3s ease;
@@ -62,7 +62,7 @@
 
         @media (max-width: 480px) {
             h1 {
-                font-size: 28px;
+                font-size: 24px;
             }
 
             button {
@@ -70,13 +70,35 @@
                 padding: 12px;
             }
         }
+        
+        @media (max-width: 320px) {
+            h1 {
+                font-size: 20px;
+            }
+
+            button {
+                font-size: 12px;
+                padding: 10px;
+            }
+        }
     </style>
+    <script>
+        function copyPixKey() {
+            const pixKey = 'athos220206@gmail.com';
+            navigator.clipboard.writeText(pixKey).then(() => {
+                alert('Chave PIX copiada: ' + pixKey);
+            }).catch(err => {
+                alert('Erro ao copiar chave PIX: ' + err);
+            });
+        }
+    </script>
 </head>
 <body>
     <div class="button-container">
         <h1>Ba Doces</h1>
         <button onclick="window.location.href='https://www.instagram.com/ba_docess/'">Siga no Instagram</button>
-        <button onclick="window.location.href='https://wa.me/55911992171265?text=Olá,tenho interesse nos brigadeiros.'">Fale no WhatsApp</button>
+        <button onclick="window.location.href='https://wa.me/55911992171265?text=Olá, tenho interesse nos brigadeiros.'">Fale no WhatsApp</button>
+        <button onclick="copyPixKey()">Copiar Chave PIX</button>
     </div>
 </body>
 </html>
